--- a/PrintRequest/printRequest.css
+++ b/PrintRequest/printRequest.css
@@ -229,8 +229,8 @@ section {
   background-color: #000;
   color: #fff;
 }
-.campus-button.selected::before {
-    background-color: #000;
+.campus-button.selected {
+    color: #000;
   }
   
 .campus-container {
